<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cb_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Mark as Favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_thumb_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_rate_detail" />

        <ImageView
            android:id="@+id/iv_thumb_detail"
            android:layout_width="@dimen/movie_thumbnail_width"
            android:layout_height="@dimen/movie_thumbnail_height"
            android:layout_margin="@dimen/basic_margin"
            android:contentDescription="@string/movie_thumbnail_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_detail"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_release_title_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/basic_margin"
            android:text="@string/release_date_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_thumb_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_title_detail" />

        <TextView
            android:id="@+id/tv_release_date_detail"
            android:layout_width="0dp"
            android:layout_height="@dimen/release_date_height"
            android:layout_margin="@dimen/basic_margin"
            android:textSize="@dimen/release_date_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_thumb_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_release_title_holder"
            tools:text="2020" />

        <TextView
            android:id="@+id/tv_rate_title_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/basic_margin"
            android:text="@string/vote_rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_thumb_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_detail" />

        <TextView
            android:id="@+id/tv_rate_detail"
            android:layout_width="0dp"
            android:layout_height="@dimen/rate_height"
            android:layout_margin="@dimen/basic_margin"
            android:textSize="@dimen/rate_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_thumb_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_rate_title_holder"
            tools:text="9.9/10" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/basic_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_overview_title_holder"
            tools:text="@tools:sample/lorem/random" />


        <TextView
            android:id="@+id/tv_overview_title_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/basic_margin"
            android:text="@string/synopsis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_thumb_detail" />

        <TextView
            android:id="@+id/tv_title_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_title_height"
            android:layout_margin="@dimen/basic_margin"
            android:textSize="@dimen/detail_title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/tv_video_title_holder"
            android:layout_margin="@dimen/basic_margin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/trailer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_overview"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_video_title_holder"
            />

        <TextView
            android:id="@+id/tv_review_title_holder"
            android:layout_margin="@dimen/basic_margin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/review"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_video"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_review_title_holder"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
